# brovisionml

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: architecture.md  birefnet.md  depth-anything.md  dinov3.md  dsine.md  hed.md  lineart.md  mlsd.md  openpose.md  performance.md  sam.md  segformer.md  stylegan3.md  weights.md
include/brovisionml/: birefnet.h  depth_anything.h  dinov2.h  dinov3.h  dinov3_preprocess.h  dpt_head.h  dpt_preprocess.h  dsine.h  dsine_decoder.h  dsine_encoder.h  dsine_ops.h  dsine_preprocess.h  dsine_refine.h  hed.h  hed_preprocess.h  lineart.h  lineart_preprocess.h  mlsd.h  mlsd_preprocess.h  openpose.h  openpose_preprocess.h  sam.h  sam_amg.h  sam_image_encoder.h  sam_mask_decoder.h  sam_preprocess.h  sam_prompt_encoder.h  segformer.h  segformer_preprocess.h  stylegan3.h  tile_runner.h  version.h
scripts/: convert-stylegan3.py  download-stylegan3.sh  download-triposplat.sh  download-weights.ps1  download-weights.sh  dump-stylegan3-golden.py
src/: birefnet.cpp  depth_anything.cpp  dinov2.cpp  dinov3.cpp  dinov3_preprocess.cpp  dpt_head.cpp  dpt_preprocess.cpp  dsine.cpp  dsine_decoder.cpp  dsine_encoder.cpp  dsine_ops.cpp  dsine_ops.cu  dsine_ops_cuda.h  dsine_preprocess.cpp  dsine_refine.cpp  hed.cpp  hed_preprocess.cpp  lineart.cpp  lineart_preprocess.cpp  mlsd.cpp  mlsd_preprocess.cpp  openpose.cpp  openpose_preprocess.cpp  profile.cpp  profile.h  sam.cpp  sam_amg.cpp  sam_image_encoder.cpp  sam_mask_decoder.cpp  sam_preprocess.cpp  sam_prompt_encoder.cpp  sam_weights_util.h  segformer.cpp  segformer_preprocess.cpp  stylegan3.cpp  stylegan3_filter.cpp  stylegan3_mapping.cpp  stylegan3_synthesis.cpp  tile_runner.cpp  version.cpp  (+1 more)
tests/: CMakeLists.txt  bench_dinov3.cpp  test_birefnet_backbone.cpp  test_depth_anything.cpp  test_depth_parity.cpp  test_device.h  test_dinov2.cpp  test_dinov3.cpp  test_dinov3_preprocess.cpp  test_dpt_head.cpp  test_dpt_preprocess.cpp  test_dsine.cpp  test_dsine_decoder.cpp  test_dsine_encoder.cpp  test_dsine_preprocess.cpp  test_dsine_refine.cpp  test_hed.cpp  test_lineart.cpp  test_mlsd.cpp  test_openpose.cpp  test_sam.cpp  test_sam_amg.cpp  test_sam_image_encoder.cpp  test_sam_mask_decoder.cpp  test_sam_preprocess.cpp  test_sam_prompt_encoder.cpp  test_sam_weights.cpp  test_segformer.cpp  test_smoke.cpp  test_stylegan3_filter.cpp  test_stylegan3_generate.cpp  test_stylegan3_input.cpp  test_stylegan3_invert.cpp  test_stylegan3_layer.cpp  test_stylegan3_mapping.cpp  test_stylegan3_parity.cpp  test_stylegan3_synthesis.cpp  test_tile_runner.cpp
tools/: bench.cpp  depth_estimate.cpp  hed_edges.cpp  lineart.cpp  mlsd_lines.cpp  normal_estimate.cpp  openpose_pose.cpp  sam_amg.cpp  sam_segment.cpp  segformer_seg.cpp  stylegan3_generate.cpp
